packages/jsii/test/negatives/neg.reserved.emits-warning.ts
///!STRICT!
export class None {
  public readonly do: boolean = true;

  public assert(_internal: boolean): void {
    throw new Error();
  }
}
